--- a/index.css
+++ b/index.css
@@ -7,3 +7,8 @@ body
         background-color: #bac1d6;
         color: #454e6b;
     }
+.content 
+    {
+        max-width: 500px;
+        margin: auto;
+    }
