--- a/index.css
+++ b/index.css
@@ -12,3 +12,9 @@ body
         max-width: 500px;
         margin: auto;
     }
+.center
+    {   
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    }
