--- a/index.css
+++ b/index.css
@@ -30,3 +30,10 @@ a:hover, a:active
 {
     color: #eee;
 }
+table, tr, th, td, caption
+{
+border: 1px sold #eee;
+font-family: 'Courier New', Courier, monospace;
+border-collapse: collapse;
+padding: 0.5rem;
+}
