--- a/index.css
+++ b/index.css
@@ -32,7 +32,7 @@ a:hover, a:active
 }
 table, tr, th, td, caption
 {
-border: 1px sold #eee;
+border: 1px solid #78808a;
 font-family: 'Courier New', Courier, monospace;
 border-collapse: collapse;
 padding: 0.5rem;
